# assignment3-per4-Ogyeet10

./: .gitignore  README.md  a3.py  movies.py  pyproject.toml  tmdb_cli.py  writeup.md
