[project]
name = "tmdb-cli"
version = "0.1.0"
description = "A CLI for querying The Movie Database API"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "dotenv>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
